UPDATED | Cloud style to ensure toggle is not covered  by the cloud

--- a/src/components/WeatherCard.module.css
+++ b/src/components/WeatherCard.module.css
@@ -4,6 +4,7 @@
     overflow: hidden;
     position: relative;
     animation: moveInBottom 1s ease-out;
+    z-index: 2;
   }
   
   .card-img {
