--- a/src/components/clouds/leftCloud.module.css
+++ b/src/components/clouds/leftCloud.module.css
@@ -1,5 +1,6 @@
 .left-cloud {
   display: none;
+  z-index: 3;
 }
 
 @media only screen and (min-width: 700px) {  
